SubBt/force-app/main/default/objects/Change_Order_Payment_Tracking_Line__c/Change_Order_Payment_Tracking_Line__c.object-meta.xml
<CustomObject>
    <label>Change Order Payment Tracking Line</label>
    <nameField>
        <label>Change Order Payment Tracking Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Order Payment Tracking Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>