SubBt/force-app/main/default/objects/Change_Order_Payment_Tracking_Line__c/fields/Balance_To_Finish__c.field-meta.xml
<CustomField>
    <fullName>Balance_To_Finish__c</fullName>
    <formula>Scheduled_Value__c  - ( Work_Completed_From_Previous_App__c  +  Work_Completed_This_Period__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance To Finish</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>