SubBt/force-app/main/default/objects/Change_Order_Payment_Tracking_Line__c/fields/Change_Order_Payment_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Payment_Tracking__c</fullName>
    <label>Change Order Payment Tracking</label>
    <referenceTo>BT_Change_Order_Payment_Tracking__c</referenceTo>
    <relationshipLabel>Change Order Payment Tracking Lines</relationshipLabel>
    <relationshipName>Change_Order_Payment_Tracking_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>