SubBt/force-app/main/default/objects/Change_Order_Payment_Tracking_Line__c/fields/Scheduled_Value__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Value__c</fullName>
    <label>Scheduled Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>