SubBt/force-app/main/default/objects/Change_Order_Payment_Tracking_Line__c/fields/Work_Completed_From_Previous_App__c.field-meta.xml
<CustomField>
    <fullName>Work_Completed_From_Previous_App__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Work Completed From Previous App</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>