SubBt/force-app/main/default/objects/Change_Order_Payment_Tracking_Line__c/fields/Work_Completed_This_Period__c.field-meta.xml
<CustomField>
    <fullName>Work_Completed_This_Period__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Work Completed This Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>